[oc] update from Pootle

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -204,6 +204,7 @@ menuOpenAllInTabs.label=Tot dobrir dins d'onglets
 menuRestoreAllTabs.label=Restablir totes los onglets
 # LOCALIZATION NOTE (menuRestoreAllTabsSubview.label): like menuRestoreAllTabs.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* tabs.
+menuRestoreAllTabsSubview.label=Restablir los onglets tampats recentament
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
 menuRestoreAllWindows.label=Restablir totas las fenèstras
@@ -233,6 +234,7 @@ refreshBlocked.redirectLabel=%S a empachat la redireccion automatica cap a una a
 # General bookmarks button
 # LOCALIZATION NOTE (bookmarksMenuButton.tooltip):
 # %S is the keyboard shortcut for "Show All Bookmarks"
+bookmarksMenuButton.tooltip=Afichar vòstres marcapaginas (%S)
 # Star button
 starButtonOn.tooltip=Modificar aqueste marcapaginas
 starButtonOff.tooltip=Marcar aquesta pagina
@@ -244,10 +246,12 @@ starButtonOverflowedStarred.label=Modificar aqueste marcapaginas
 # Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 # %S is the keyboard shortcut for "Print"
+printButton.tooltip=Imprimir aquesta pagina… (%S)
 
 # New Window button tooltip
 # LOCALIZATION NOTE (newWindowButton.tooltip):
 # %S is the keyboard shortcut for "New Window"
+newWindowButton.tooltip=Dobrir una fenèstra novèla (%S)
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
@@ -430,6 +434,7 @@ fullscreen.entered=Ara, %S es afichat en mòde ecran complet.
 fullscreen.rememberDecision=Se remembrar d'aquesta decision per %S
 
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
+fullscreenButton.tooltip=Afichar la fenèstra en ecran complet (%S)
 
 service.toolbarbutton.label=Servicis
 service.toolbarbutton.tooltiptext=Servicis
@@ -500,6 +505,10 @@ getUserMedia.denyRequest.accesskey = D
 getUserMedia.sharingCamera.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingMicrophone.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Actualament, partejatz vòstra webcam e vòstre microfòn amb aquesta pagina.
+getUserMedia.continueSharing.label = Contunhar lo partiment
+getUserMedia.continueSharing.accesskey = C
+getUserMedia.stopSharing.label = Arrestar lo partiment
+getUserMedia.stopSharing.accesskey = S
 
 # Mixed Content Blocker Doorhanger Notification
 # LOCALIZATION NOTE - %S is brandShortName
@@ -520,4 +529,6 @@ slowStartup.disableNotificationButton.accesskey = A
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+customizeTips.tip0 = %1$S : Podètz personalizar %2$S per que s'adapte a vos. Fasètz simplament lisar un dels elements çaijós dins lo menú o la barra d'aisinas. %3$S suls biaisses de personalizar %2$S.
+customizeTips.tip0.hint = Astúcia
 customizeTips.tip0.learnMore = Ne saber mai
