--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -4,13 +4,16 @@
 
 history-panelmenu.label = Istoric
 # LOCALIZATION NOTE(history-panelmenu.tooltiptext2): %S is the keyboard shortcut
+history-panelmenu.tooltiptext2 = Afichar vòstre istoric (%S)
 
 privatebrowsing-button.label = Novèla fenèstra de navigacion privada
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
+privatebrowsing-button.tooltiptext = Novèla fenèstra de navigacion privada (%S)
 
 save-page-button.label = Enregistrar la pagina
 # LOCALIZATION NOTE(save-page-button.tooltiptext2): %S is the keyboard shortcut
 # Use the unicode ellipsis char, \u2026, or use "..." if \u2026 doesn't suit traditions in your locale.
+save-page-button.tooltiptext2 = Enregistrar la pagina… (%S)
 
 find-button.label = Recercar
 # LOCALIZATION NOTE(find-button.tooltiptext2): %S is the keyboard shortcut.
@@ -20,56 +23,77 @@ find-button.tooltiptext2 = Recercar dins aquesta pagina... (%S)
 open-file-button.label = Dobrir lo fichièr
 # LOCALIZATION NOTE (open-file-button.tooltiptext2): %S is the keyboard shortcut.
 # Use the unicode ellipsis char, \u2026, or use "..." if \u2026 doesn't suit traditions in your locale.
+open-file-button.tooltiptext2 = Dobrir un fichièr… (%S)
 
 developer-button.label = Desvolopaire
 # LOCALIZATION NOTE(developer-button.tooltiptext): %S is the keyboard shortcut
+developer-button.tooltiptext = Aisinas de desvolopament web (%S)
 
 add-ons-button.label = Moduls complementaris
 # LOCALIZATION NOTE(add-ons-button.tooltiptext2): %S is the keyboard shortcut
 add-ons-button.tooltiptext2 = Dobrir lo gestionari de moduls complementaris (%S)
 
+switch-to-metro-button2.label = Windows 8 tactil
 # LOCALIZATION NOTE(switch-to-metro-button2.tooltiptext): %S is the brand short name
+switch-to-metro-button2.tooltiptext = Tornar dobrir amb %S per Windows 8 tactil
 
 preferences-button.label = Preferéncias
+preferences-button.tooltiptext2 = Dobrir las preferéncias
+preferences-button.tooltiptext.withshortcut = Dobrir las preferéncias (%S)
 # LOCALIZATION NOTE (preferences-button.labelWin): Windows-only label for Options
 preferences-button.labelWin = Opcions
 # LOCALIZATION NOTE (preferences-button.tooltipWin): Windows-only tooltip for Options
+preferences-button.tooltipWin2 = Dobrir las opcions
 
 zoom-controls.label = Nivèl de zoom
 zoom-controls.tooltiptext = Nivèl de zoom
 
 zoom-out-button.label = Zoom arrièr
 # LOCALIZATION NOTE(zoom-out-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-out-button.tooltiptext2 = Zoom arrièr (%S)
 
 # LOCALIZATION NOTE(zoom-reset-button.label): %S is the current zoom level,
 # %% will be displayed as a single % character (% is commonly used to define
 # format specifiers, so it needs to be escaped).
+zoom-reset-button.label = %S%%
 # LOCALIZATION NOTE(zoom-reset-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-reset-button.tooltiptext2 = Reïnicializar lo nivèl de zoom (%S)
 
 zoom-in-button.label = Zoom avant
 # LOCALIZATION NOTE(zoom-in-button.tooltiptext2): %S is the keyboard shortcut.
+zoom-in-button.tooltiptext2 = Zoom avant (%S)
 
+edit-controls.label = Contraròtles d'edicion
+edit-controls.tooltiptext = Contraròtles d'edicion
 
 cut-button.label = Talhar
 # LOCALIZATION NOTE(cut-button.tooltiptext2): %S is the keyboard shortcut.
+cut-button.tooltiptext2 = Talhar (%S)
 
 copy-button.label = Copiar
 # LOCALIZATION NOTE(copy-button.tooltiptext2): %S is the keyboard shortcut.
+copy-button.tooltiptext2 = Copiar (%S)
 
 paste-button.label = Pegar
 # LOCALIZATION NOTE(paste-button.tooltiptext2): %S is the keyboard shortcut.
+paste-button.tooltiptext2 = Pegar (%S)
 
 # LOCALIZATION NOTE (feed-button.tooltiptext): Use the unicode ellipsis char,
 # \u2026, or use "..." if \u2026 doesn't suit traditions in your locale.
-feed-button.label = S'abonar
+feed-button.label = S'inscriure
 feed-button.tooltiptext = S'abonar a aquesta pagina…
 
 characterencoding-button.label = Encodatge de caractèr
+characterencoding-button.tooltiptext2 = Afichar las opcions d'encodatge de caractèrs
 
+email-link-button.label = Madar per corrièr electronic un ligam cap a la pagina…
 # LOCALIZATION NOTE (email-link-button.tooltiptext2): Use the unicode ellipsis char,
 # \u2026, or use "..." if \u2026 doesn't suit traditions in your locale.
+email-link-button.tooltiptext2 = Madar per corrièr electronic un ligam cap a la pagina...
 
 # LOCALIZATION NOTE(quit-button.tooltiptext.linux2): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
+quit-button.tooltiptext.linux2 = Quitar %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
+quit-button.tooltiptext.mac = Quitar %1$S (%2$S)
