--- a/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/browser/chrome/browser/devtools/appcacheutils.properties
@@ -15,40 +15,51 @@
 # documentation on web development on the web.
 
 # LOCALIZATION NOTE (noManifest): the specified page has no cache manifest.
+noManifest=La pagina especificada possedís pas cap de manifèste.
 
 # LOCALIZATION NOTE (notUTF8): the associated cache manifest has a character
 # encoding that is not UTF-8. Parameters: %S is the current encoding.
+notUTF8=Lo manifèste possedís un encodatge de caractèrs %S. L'encodatge dels caractèrs del manifèste deu èsser de tipe utf-8.
 
 # LOCALIZATION NOTE (badMimeType): the associated cache manifest has a
 # mimetype that is not text/cache-manifest. Parameters: %S is the current
 # mimetype.
+badMimeType=Lo manifèste possedís un tipe MIME %S. Lo tipe MIME dels manifèstes deu èsser text/cache-manifest.
 
 # LOCALIZATION NOTE (duplicateURI): the associated cache manifest references
 # the same URI from multiple locations. Parameters: %1$S is the URI, %2$S is a
 # list of references to this URI.
+duplicateURI=L'URI %S es referenciat a d'endreches multiples. Aquò es pas autorizat : %S.
 
 # LOCALIZATION NOTE (networkBlocksURI, fallbackBlocksURI): the associated
 # cache manifest references the same URI in the NETWORK (or FALLBACK) section
 # as it does in other sections. Parameters: %1$S is the line number, %2$S is
 # the resource name, %3$S is the line number, %4$S is the resource name, %5$S
 # is the section name.
+networkBlocksURI=La linha %S (%S) de la seccion NETWORK empacha la mesa en escondedor de la linha %S (%S) dins la seccion %S.
+fallbackBlocksURI=La linha %S (%S) de la seccion FALLBACK empacha la mesa en enscondedor de la linha %S (%S) dins la seccion %S.
 
 # LOCALIZATION NOTE (fileChangedButNotManifest): the associated cache manifest
 # references a URI that has a file modified after the cache manifest.
 # Parameters: %1$S is the resource name, %2$S is the cache manifest, %3$S is
 # the line number.
+fileChangedButNotManifest=Lo fichièr %S es estat modificat aprèp %S. Levat se lo tèxte del fichièr manifèste es modificat, la version en escondedor serà utilizada a la plaça a la linha %S.
 
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
 # name, %2$S is the line number.
+cacheControlNoStore=%S possedís l'entèsta cache-control amb per valor no-store. Aquò empacharà l'escondedor d'aplicacion d'emmagazinar lo fichièr a la linha %S.
 
 # LOCALIZATION NOTE (notAvailable): the specified resource is not available.
 # Parameters: %1$S is the resource name, %2$S is the line number.
+notAvailable=%S punta cap a una ressorsa indisponibla a la linha %S.
 
 # LOCALIZATION NOTE (invalidURI): it's used when an invalid URI is passed to
 # the appcache.
+invalidURI=L'URI passat a AppCacheUtils es pas valid.
 
 # LOCALIZATION NOTE (noResults): it's used when a search returns no results.
+noResults=Vòstra recèrca a pas tornat cap de resultat.
 
 # LOCALIZATION NOTE (cacheDisabled): it's used when the cache is disabled and
 # an attempt is made to view offline data.
@@ -91,6 +102,7 @@
 # LOCALIZATION NOTE (settingsBadValue): the associated cache manifest has a
 # SETTINGS section containing something other than the valid "prefer-online"
 # or "fast". Parameters: %S is the line number where this error occurs.
+settingsBadValue=La seccion SETTINGS pòt pas conténer qu'una sola valor, « prefer-online » o « fast » a la linha %S.
 
 # LOCALIZATION NOTE (invalidSectionName): the associated cache manifest
 # contains an invalid section name. Parameters: %1$S is the section name, %2$S
@@ -98,3 +110,4 @@
 
 # LOCALIZATION NOTE (entryNotFound): the requested cache entry that does not
 # exist.
+entryNotFound=Entrada introbabla.
