--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -103,6 +103,7 @@ eventOnSelector=lo
 
 # LOCALIZATION NOTE (eventNative): The text to display in the events tab when
 # a listener is added from plugins, thus getting translated to native code.
+eventNative=[còde natiu]
 
 # LOCALIZATION NOTE (*Events): The text to display in the events tab for
 # each group of sub-level event entries.
@@ -113,18 +114,26 @@ clipboardEvents=Pòrtapapièr (clipboard)
 compositionEvents=Composicion
 deviceEvents=Periferic
 displayEvents=Afichar
+dragAndDropEvents=Lisar e depausar
+gamepadEvents=Manega de jòc
+indexedDBEvents=IndexedDB
 interactionEvents=Interaccion
 keyboardEvents=Clavièr
+mediaEvents=Mèdia HTML5
 mouseEvents=Mirga
 mutationEvents=Mutacion
 navigationEvents=Navigacion
 pointerLockEvents=Mèdia HTML5
+sensorEvents=Captador
+storageEvents=Emmagazinatge
 timeEvents=Ora
+touchEvents=Tòca
 otherEvents=Autres
 
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle black boxing its associated
 # source.
+blackBoxCheckboxTooltip=Plaçar la font dins una bóstia negra o la levar
 
 # LOCALIZATION NOTE (noMatchingStringsText): The text to display in the
 # global search results when there are no matching strings after filtering.
@@ -255,6 +264,12 @@ variablesEditButtonTooltip=Clicar per definir la valor
 # https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isFrozen
 # https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isSealed
 # It's probably best to keep these in English.
+writableTooltip=modificabla
+frozenTooltip=gelada
+sealedTooltip=sagelada
+extensibleTooltip=extensibla
+overriddenTooltip=subrecargada
+WebIDLTooltip=WebIDL
 
 # LOCALIZATION NOTE (variablesSeparatorLabel): The text that is displayed
 # in the variables list as a separator between the name and value.
