--- a/browser/chrome/browser/devtools/profiler.properties
+++ b/browser/chrome/browser/devtools/profiler.properties
@@ -70,6 +70,7 @@ profiler.loading=Cargament del perfil…
 # LOCALIZATION NOTE (profiler.stateIdle)
 # This string is used to show that the profile in question is in IDLE
 # state meaning that it hasn't been started yet.
+profiler.stateIdle=Inactiu
 
 # LOCALIZATION NOTE (profiler.stateRunning)
 # This string is used to show that the profile in question is in RUNNING
