--- a/browser/chrome/browser/devtools/responsiveUI.properties
+++ b/browser/chrome/browser/devtools/responsiveUI.properties
@@ -59,3 +59,4 @@ responsiveUI.customNamePromptMsg=Nomenar la preseleccion %Sx%S
 # when touch events are enabled
 responsiveUI.notificationReload=Tornar cargar
 responsiveUI.notificationReload_accesskey=R
+responsiveUI.dontShowReloadNotification_accesskey=N
