--- a/browser/chrome/browser/devtools/app-manager.properties
+++ b/browser/chrome/browser/devtools/app-manager.properties
@@ -9,8 +9,13 @@ device.deviceSize=Talha de l'aparelh : %1$Sx%2$S (%3$S DPI)
 # LOCALIZATION NOTE (connection.connectedToDevice, connection.connectTo):
 # %1$S is the host name, %2$S is the port number.
 connection.connectedToDevice=Connectat a %1$S
+connection.connectTo=Se connectar a %1$S:%2$S
+project.filePickerTitle=Seleccionar un dorsièr d'aplicacion web
 project.installing=Installacion en cors…
 project.installed=Installat !
+validator.nonExistingFolder=Lo dorsièr del projècte existís pas
+validator.expectProjectFolder=Lo dorsièr del projècte es en realitat un fichièr
+validator.wrongManifestFileName=Las aplicacions empaquetadas necessitan un fichièr manifèste nomenat « manifest.webapp » situat a la raiç del dorsièr del projècte.
 validator.invalidManifestURL=L'URL del manifèste « %S » es invalida
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
@@ -24,6 +29,13 @@ validator.invalidProjectType=Tipe de projècte « %S » desconegut
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Lo camp obligatòri « name » es absent del manifèste.
 validator.missIconsManifestProperty=Lo camp « icons » es absent del manifèste.
+validator.missIconMarketplace=la publicacion d'aplicacion sul Marketplace necessita una icòna d'al mens 128px
+validator.invalidAppType=Tipe d'aplicacion desconegut : « %S ».
+validator.invalidHostedPriviledges=Las aplicacions albergadas pòdon pas èsser de tipe « %S ».
+validator.noCertifiedSupport=Las aplicacions certificadas (« certified ») son pas entièrament presas en carga pel gestionari d'aplicacions.
+validator.nonAbsoluteLaunchPath=Lo camin d'aviada deu èsser un camin absolut que comence per « / » : « %S »
+validator.accessFailedLaunchPath=Impossible d'accedir al document inicial de l'aplicacion « %S »
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
+validator.accessFailedLaunchPathBadHttpCode=Impossible d'accedir al document inicial de l'aplicacion « %1$S », còde HTTP %2$S recebut
 
