--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -63,6 +63,7 @@ recentTagsTitle=Etiquetas recentas
 # LOCALIZATION NOTE (windows8TouchTitle): this is the name of the folder used
 # to store bookmarks created in Metro mode and share bookmarks between Metro
 # and Desktop.
+windows8TouchTitle=Windows 8 tactil
 
 OrganizerQueryHistory=Istoric
 OrganizerQueryDownloads=Telecargaments
