[oc] update from Pootle (mobile)

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -16,6 +16,7 @@ alertCantOpenDownload=Impossible de dobrir lo fichièr. Lo podètz enregistrar.
 alertDownloadsSize=Telecargament tròp voluminós
 alertDownloadsNoSpace=Espaci d'emmagazinatge insufisent
 alertDownloadsToast=Telecargament aviat...
+alertDownloadsPause=Pausa
 alertDownloadsResume=Tornar prene
 alertDownloadsCancel=Anullar
 
